--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "danbooru": "^3.1.0",
     "discord.js": "^11.5.1",
     "ffmpeg": "0.0.4",
+    "glob": "^7.1.4",
     "jquery": "^3.4.1",
     "jsdom": "^15.1.1",
     "node-opus": "^0.3.2",
